# Digital-Image-Processing

./: .gitignore
Problem1/: Problem1_Report.docx
Problem1/SourceCode/: CMakeLists.txt  HE_need_review1.py  HE_need_review2.py  histogramEqualization  histogramEqualization.cpp  histogramEqualization.m  histogramEqualization.py  histogramEqualization2  histogramEqualization2.cpp  histogramEqualization2.m  histogramEqualization2.py  histogramEqualization3.m
Problem10/SourceCode/: PCA.m  averageFilter.m  bound2im.m  boundaryFollowing.m  chainCode.m  connectpoly.m  convolution.m  followBoundary.m  intline.m  otsuThresh.m  subsample.m
Problem2/: Problem2_Report.docx
Problem2/SourceCode/: Laplacian1.m  Laplacian2.m  Project2_2.m  README.md  Sobel0.m  avefilt.m  gaussfit.m  laplacian.m  meanfilter.m  midfilt.m  project2_1.m  sobel.m  synthesis.m
Problem3/SourceCode/: ButterworthHighpass.m  ButterworthLowpass.m  GaussianHighpass.m  GaussianLowpass.m  gaussianHighpassfilter.m  gaussianLowpassfilter.m  idealHighpass.m  idealHighpassFilter.m  idealLowpass.m  idealLowpassFilter.m  imfreqfilt.m
Problem4/SourceCode/: adaptiveNoiseReductionFilter.m  adpmedian.m  alphatrim.m  charmean.m  erlang.m  exponential.m  gmean.m  harmean.m  imnoise2.m  imnoise3.m  noiseGenerating.m  noiseReduction.m  processInputs.m  saltpepper.m  selfDefinedAveFilt.m  selfDefinedMedian.m  setDefaults.m  spfilt.m  tofloat.m
Problem5/: inverse_filtering_for_DIP.m
Problem5/SourceCode/: ImageRestoration.m  fspeicalmotion.cpp  invFilter.m  motionBlur.m  ref.m  wienerFilter.m
Problem7/: dct.m
(+55 files in other folders)
